jitsi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jitsi-ingress
  namespace: jitsi
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`meet.cngei.it`)
      services:
        - kind: Service
          name: jitsi-web
          port: 80
  tls:
    secretName: jitsi-tls
